   a given schema.
 - Added a getSource() method on XmlRepresentation that results a JAXP Source instance.
 - Added JAXB extension based on a contribution by Overstock.com (via Sean Landis).
 - Added JAXB 2.0 and StAX 1.0 libraries.
 - Added a Template.getVariableNames() method. Suggested by Stian Soiland.
 - Added new Dimension.AUTHORIZATION enum entry. Suggested by Stian Soiland.
 - The ServletConverter now also copy the Servlet's request attributes into the Restlet
   attributes map. Suggested by Leigh Klotz.
 - Added new media types for RSS and WADL. Contributed by Avi Flax.
 - Added Atom, Relax NG, RSS, RTF, WADL and XSD in the common extensions of MetadataService.
   Contributed by Avi Flax.
 - Simplified the management of MediaType constants. Contributed by Stian Soiland.
 - Added a Representation.release() to have an uniform way to release a representation without forcing
   a read for example or manually closing the socket, the channel, the file, etc.
 - Added a Message.release() method to have an easy way to release the message's entity. Suggested
   by Stian Soiland.
 - Application is now concrete and has a setRoot() method.
 - Added Component.setDefaultHost() method.
 - Moved the "expirationDate", "modificationDate", "tag", "size" properties from Variant to 
   Representation. The old properties are only deprecated for now but will be removed in a later version. 
 - Added SpringApplication, SpringComponent, SpringHost, SpringRouter, SpringServer to the 
   Spring extension to facilitate the wiring by Spring IoC. 

[Misc]
 - Removed AsyncWeb connector, to be replaced by a custom MINA based one.
 - Removed Jetty 5 connector from the code base. Jetty 6 connector is stable enough now.
 - Added Response.locationRef property as a replacement for the Response.redirectRef
   property that is now deprecated. Suggested by Michael Vogel and Avi Flax.
 - Updated projects to Eclipse 3.3. Minor adjustments required.