@@ -65,7 +65,9 @@ Changes log
  - Moved the "expirationDate", "modificationDate", "tag", "size" properties from Variant to 
    Representation. The old properties are only deprecated for now but will be removed in a later version. 
  - Added SpringApplication, SpringComponent, SpringHost, SpringRouter, SpringServer to the 
-   Spring extension to facilitate the wiring by Spring IoC. 
+   Spring extension to facilitate the wiring by Spring IoC.
+ - The Resource class now accepts POST requests without any entity, or with an
+   empty entity. Suggested by Sean Landis and Stian Soiland.
 
 [Misc]
  - Removed AsyncWeb connector, to be replaced by a custom MINA based one.
